# CS-002

Chp2/area_of_shapes/: CMakeLists.txt  main.cpp
Chp2/boolExpressions/: CMakeLists.txt  main.cpp
Chp2/divideby2/: CMakeLists.txt  main.cpp
Chp2/guessthecomputer/: CMakeLists.txt  main.cpp
Chp2/if_else/: CMakeLists.txt  main.cpp
Chp2/lab_boolean_expressions/: CMakeLists.txt  main.cpp
Chp2/lab_chore_list/: CMakeLists.txt  main.cpp
Chp2/lab_variables/: CMakeLists.txt  main.cpp
Chp2/literals/: CMakeLists.txt  main.cpp
Chp2/looping_bonanza/: CMakeLists.txt  main.cpp
Chp2/practice_program_1/: main.cpp
Chp2/practice_program_2/: main.cpp
Chp2/practice_program_3/: main.cpp
Chp2/practice_program_4/: CMakeLists.txt  main.cpp
Chp2/programming_project_1/: main.cpp
Chp2/programming_project_2/: main.cpp
Chp2/programming_project_3/: main.cpp
Chp2/programming_project_4/: CMakeLists.txt  main.cpp
Chp2/xor/: CMakeLists.txt  main.cpp
Chp3/practice_program_1/: CMakeLists.txt  main.cpp
Chp3/practice_program_2/: CMakeLists.txt  main.cpp
Chp3/practice_program_5/: CMakeLists.txt  main.cpp
Chp3/practice_program_6/: CMakeLists.txt  main.cpp
Chp3/programming_project_1/: main.cpp
Chp3/programming_project_2/: CMakeLists.txt  main.cpp
Chp3/programming_project_3/: CMakeLists.txt  main.cpp
Chp4/driver/: CMakeLists.txt
Chp8/classes/: CMakeLists.txt  Connection.cpp  Connection.h  Grid.cpp  Grid.h  Mistakes.cpp  Mistakes.h  MouseEvents.cpp  MouseEvents.h  Position.cpp  Position.h  Square.cpp  Square.h  functions.cpp  functions.h  main.cpp  words.txt
(+191 files in other folders)
